[package]

name = "polynomial"
version = "0.1.0"
authors = ["gifnksm <makoto.nksm+github@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gifnksm/polynomial-rs"
description = "Manipulations and data types that represent polynomial."
documentation = "https://gifnksm.github.io/polynomial-rs"

[dependencies]
num-traits = "0.2"
alga = "0.9.3"
alga_derive = "0.9.2"
